tests/accept/good_return.ul
float foo(int x) { return x; }
void main() {}