tests/reject/bad_array_access.ul
void main() {
     int[2] x;

     return x[2;
}